--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@
 body {
     font-family: "Josefin Sans", sans-serif;
     color: var(--desaturated-red);
-    background-image: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
 }
 
 img {
@@ -109,6 +108,7 @@ img {
 @media only screen and (max-width:899px) {
     body {
         text-align: center;
+        background-image: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
     }
     .main {
         padding-right: 3em;
@@ -125,6 +125,7 @@ img {
         grid-template-columns: 1.35fr 1fr;
         grid-template-rows: .3fr 1fr;
         min-height: 100vh;
+        background-image: url(../images/bg-pattern-desktop.svg),linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
     }
     .main, .header {
         margin-left: 11vmax;
